add controller integration tests